# ordenee

./: .gitignore  generation.config.json  package-lock.json  package.json  runbuild.sh  rundev.sh  svelte.config.js
.lapce/: run.toml
common/: Cargo.toml  diesel.toml
common/migrations/2024-01-22-224929_create_table_paymentsmethods/: up.sql
common/src/: lib.rs  models.rs  schema.rs
common/src/database/: mod.rs  models.rs  schema.rs
common/src/database/imp/: clients.rs  equipaments.rs  mod.rs  payment_methods.rs  person_addresses.rs  persons.rs
common/src/database/migrations/2024-04-26-181313_equipaments/: up.sql
common/src/database/migrations/2024-04-26-181338_paymentsmtd/: up.sql
common/src/database/migrations/2024-04-26-181358_clients/: up.sql
common/src/database/migrations/2024-04-26-181358_persons/: up.sql
common/src/database/migrations/2024-06-01-042012_PersonAddresses/: up.sql
common/src/fs/: mod.rs
common/src/migrations/2024-04-26-181358_clients/: up.sql
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: address_rest.rs  clients_rest.rs  mod.rs  payment_rest.rs
src/components/clientes/: ClientHeader.svelte  ClienteCard.svelte
src/components/clients/: ClientCard.svelte  ClientHeader.svelte
src/components/global/: Footer.svelte  NavBar.svelte  Window.svelte
src/components/paymentmethods/: List.svelte  MethodsList.svelte
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/clientes/: +page.svelte
src/routes/clients/: +page.svelte  +page.ts
src/routes/equipaments/: +page.svelte
src/routes/orders/: +page.svelte
src/routes/paymentmethods/: +page.svelte  +page.ts
src/routes/technicals/: +page.svelte
src/routes/tecnicos/: +page.svelte
src/store/: index.ts
src/styles/: global.scss  root.scss
src/styles/buttons/: default.scss
src/styles/flexbox/: default.scss  gap.scss
src/styles/inputs/: default.scss
src/styles/margins/: default.scss
src/styles/paddings/: default.scss
src/types/: Payment.ts  Person.ts
static/: splashscreen.html
(+43 files in other folders)
