[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.32"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
diesel = { version = "2.1.4", features = ["sqlite"] }
dotenvy = "0.15.7"
serde = "1.0.195"
serde_json = "1.0.111"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
