[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
members = [
    "common"
]

[lib]
name = "ordenee"
crate-type = ["staticlib", "cdylib", "rlib"]

[build]
rustflags = ["-z", "threads=8", "-Zlocation-detail=none", "--remap-path-prefix"]

[profile.release]
opt-level = "s"
codegen-units = 256
overflow-checks = false
debug-assertions = false
lto = true
debug = false
panic = "abort"
strip = "none"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
common = { path = "../common" }
diesel = "2.1.6"
window-vibrancy = "0.4.0"
tauri-plugin-fs = "2.0.0-beta.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
